# runtime_stm32l4

./: CMakeLists.txt  CMakePresets.json  README.md  postbuild.cmake
app/: hello.c
cmake/: install-rules.cmake
inc/platform/: platform.h  printf.h  stack_usage.h  utils.h
src/: handlers.c  init.c  printf.c  rng.c  stm32l4r5zi.ld
toolchains/: gcc-armv7e_m-unknown-none-eabi.toolchain
